Make the cast wrap correctly and only show it if it exists

--- a/milestone-5/assets/css/style.css
+++ b/milestone-5/assets/css/style.css
@@ -91,7 +91,9 @@ main {
 .title > div, 
 .original_title > div, 
 .vote, 
-.original-language {
+.original-language,
+.cast,
+.genres {
     align-items: center;
 }
 
